--- a/public/post/2018-02-19-college-in-the-schools.Rmd
+++ b/public/post/2018-02-19-college-in-the-schools.Rmd
@@ -55,7 +55,7 @@ The underlying philosophy of CATALST is that students are primarily responsible 
 
 This is also true in the classroom, where students work with 2&ndash;3 other students through a series of structured activities and discussions. This group-work is where a majority of the student learning takes place. In the classroom, the role of the instructor is more "guide-on-the-side": leading larger classroom discussions, posing questions, and helping students draw connections and make sense of the material. 
 
-Students use the TinkerPlots&trade; software during class and as a part of their at-home preparation and homework. TinkerPlots&trade; employs allows students to create models and simulate date using an interactive set of tools. The visual display of the simulation process helps students gain a deeper conceptual understanding of the underlying data generation process used in statistical inference.
+Students use the [TinkerPlots&trade; software](http://tinkerplots.com/) during class and as a part of their at-home preparation and homework. TinkerPlots&trade; employs allows students to create models and simulate date using an interactive set of tools. The visual display of the simulation process helps students gain a deeper conceptual understanding of the underlying data generation process used in statistical inference.
 
 Because of the emphasis on cooperative group learning in the course, students are evaluated using both group and individual assessments. Individual-level assessments offer students an opportunity to show they have learned the material, while group assessments push students' understanding of the course material through questions that extend the content in ways they may not have previously encountered (while at the same time offering these extensions via the relative safety of the group). 
 
