--- a/content/post/2018-02-19-college-in-the-schools.Rmd
+++ b/content/post/2018-02-19-college-in-the-schools.Rmd
@@ -1,20 +1,12 @@
-+++
-date = "2018-02-28"
-title = "College in the Schools"
-
-summary = "Implementation of the EPsy 3264: Basic and Applied Statistics course in 17 high schools across Minnesota."
-
-image_preview = "data-tiles.jpg"
-tags = ["CATALST", "teaching", "CIS", "EPsy-3264"]
-external_link = ""
-math = false
-
-# Optional featured image (relative to `static/img/` folder).
-[header]
-image = "headers/data-tiles.jpg"
-caption = "Image Credit: Research Data Management, a Flickr photo by janneke staaks"
-
-+++
+---
+title: "College in the Schools"
+author: "~"
+date: 2018-02-28
+tags: ["CATALST", "teaching", "CIS", "EPsy-3264"]
+header:
+  image: "headers/data-tiles.jpg"
+  caption: "Image Credit: Research Data Management, a Flickr photo by janneke staaks"
+---
 
 
 [College in the Schools](https://ccaps.umn.edu/college-in-the-schools) is a concurrent enrollment program in which existing University of Minnesota courses are taught in high schools by high school teachers. All schools wishing to offer a CIS course go through an application process, including an interview and approval by the post-secondary academic department sponsoring the course of any high school teachers who will be teaching the course.
