--- a/content/publication/2017-serj.md
+++ b/content/publication/2017-serj.md
@@ -1,6 +1,6 @@
 +++
-title = "Statistics graduate teaching assistants' beliefs, practices, and preparation for teaching introductory statistics"
-date = "2015-09-01"
+title = "Statistics Graduate Teaching Assistants' Beliefs, Practices, and Preparation for Teaching Introductory Statistics"
+date = "2017-05-31"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = ["Justice, N.", "Zieffler, A.", "Garfield, J."]
