--- a/content/publication/2012-jse.md
+++ b/content/publication/2012-jse.md
@@ -1,9 +1,9 @@
 +++
-title = "Assessing Learning Outcomes: An Analysis of the GOALS-2 Instrument"
-date = "2015-11-30"
+title = "The Statistics Teaching Inventory: A Survey on Statistics Teachers' Classroom Practices and Beliefs"
+date = "2012-03-15"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
-authors = ["Sabbag, A. G.", "Zieffler, A."]
+authors = ["Zieffler, A.", "Park, J.", "Garfield, J.", "delMas, R.", "Bjornsdottir, A."]
 
 # Publication type.
 # Legend:
@@ -17,11 +17,11 @@ authors = ["Sabbag, A. G.", "Zieffler, A."]
 publication_types = ["2"]
 
 # Publication name and optional abbreviated version.
-publication = "*Statistics Education Research Journal, 14*(2), 93&ndash;116"
+publication = "*Journal of Statistics Education, 20*(1)"
 publication_short = ""
 
 # Abstract and optional shortened version.
-abstract = "The test instrument GOALS-2 was designed primarily to evaluate the effectiveness of the CATALST curriculum. The purpose of this study was to perform a psychometric analysis of this instrument. Undergraduate students from six universities in the United States ($n=289$) were administered the instrument. Three measurement models were fit and compared: the two-parameter logistic model, the mixed model (comprised of both the two-parameter logistic and the graded-response model), and the bi-factor model. The mixed model was found to most appropriately model students' responses. The results suggested the revision of some items and the addition of more discriminating items to improve total test information."
+abstract = "This paper reports on an instrument designed to assess the practices and beliefs of instructors of introductory statistics courses across the disciplines. Funded by a grant from the National Science Foundation, this project developed, piloted, and gathered validity evidence for the Statistics Teaching Inventory (STI). The instrument consists of 50 items in six parts and is administered online. The development of the instrument and the gathering and analysis of validity evidence are described. Plans and suggestions for use of the STI are offered."
 abstract_short = ""
 
 # Featured image thumbnail (optional)
@@ -33,10 +33,10 @@ selected = true
 # Projects (optional).
 #   Associate this publication with one or more of your projects.
 #   Simply enter the filename (excluding '.md') of your project file in `content/project/`.
-projects = ["catalst-project"]
+projects = ["eatlas-project"]
 
 # Links (optional).
-url_pdf = "http://iase-web.org/documents/SERJ/SERJ14(2)_Sabbag.pdf"
+url_pdf = "https://ww2.amstat.org/publications/jse/v20n1/zieffler.pdf"
 # url_preprint = ""
 # url_code = ""
 # url_dataset = ""
