--- a/content/publication/2014-esm.md
+++ b/content/publication/2014-esm.md
@@ -25,7 +25,7 @@ abstract = "This paper describes the importance of developing students' reasonin
 image_preview = ""
 
 selected = true
-#projects = ["biosquare"]
+projects = ["catalst-project"]
 url_source = "https://link.springer.com/article/%2010.1007/s10649-014-9541-7/fulltext.html"
 math = true
 highlight = true
