--- a/content/publication/2008-ts.md
+++ b/content/publication/2008-ts.md
@@ -37,7 +37,7 @@ selected = true
 # url_slides = ""
 # url_video = ""
 # url_poster = ""
- url_source = "http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9639.2008.00331.x/abstract"
+# url_source = ""
 
 math = true
 highlight = true
