--- a/content/publication/2011-tas.md
+++ b/content/publication/2011-tas.md
@@ -26,13 +26,13 @@ image_preview = ""
 
 selected = true
 #projects = [""]
-url_source = "https://amstat.tandfonline.com/doi/abs/10.1198/tast.2011.08241"
+# url_source = ""
 math = true
 highlight = true
 
 [header]
-image = "typewriter.png"
-caption = "Image Credit: A flickr photo by Mateusz Łapsa-Malawski"
+image = "headers/andy-zieffler-header.jpg"
+caption = "Image Credit: A photo by Andrew Zieffler"
 
 +++
 
