--- a/content/publication/2012-brm.md
+++ b/content/publication/2012-brm.md
@@ -44,7 +44,7 @@ url_code = "https://zief0002.github.io/ross/"
 # url_slides = ""
 # url_video = ""
 # url_poster = ""
-url_source = "https://link.springer.com/article/10.3758%2Fs13428-011-0170-0"
+# url_source = ""
 
 # Does the content use math formatting?
 math = true
@@ -53,8 +53,8 @@ math = true
 highlight = true
 
 [header]
-image = "typewriter.png"
-caption = "Image Credit: A flickr photo by Mateusz Łapsa-Malawski"
+image = "headers/andy-zieffler-header.jpg"
+caption = "Image Credit: A photo by Andrew Zieffler"
 
 +++
 
