--- a/content/publication/2017-serj.md
+++ b/content/publication/2017-serj.md
@@ -33,7 +33,7 @@ selected = true
 # Projects (optional).
 #   Associate this publication with one or more of your projects.
 #   Simply enter the filename (excluding '.md') of your project file in `content/project/`.
-#projects = ["deep-learning"]
+#projects = [""]
 
 # Links (optional).
 url_pdf = "https://iase-web.org/documents/SERJ/SERJ16(1)_Justice.pdf"
@@ -53,8 +53,8 @@ math = true
 highlight = true
 
 [header]
-image = "typewriter.png"
-caption = "Image Credit: A flickr photo by Mateusz Łapsa-Malawski"
+image = "headers/andy-zieffler-header.jpg"
+caption = "Image Credit: A photo by Andrew Zieffler"
 
 +++
 
