--- a/content/publication/2012-zdm.md
+++ b/content/publication/2012-zdm.md
@@ -44,7 +44,7 @@ projects = ["catalst-project"]
 # url_slides = ""
 # url_video = ""
 # url_poster = ""
-url_source = "https://link.springer.com/article/10.1007/s11858-012-0447-5"
+# url_source = ""
 
 # Does the content use math formatting?
 math = true
@@ -53,8 +53,8 @@ math = true
 highlight = true
 
 [header]
-image = "typewriter.png"
-caption = "Image Credit: A flickr photo by Mateusz Łapsa-Malawski"
+image = "headers/andy-zieffler-header.jpg"
+caption = "Image Credit: A photo by Andrew Zieffler"
 
 +++
 
