--- a/content/publication/2014-rolf.md
+++ b/content/publication/2014-rolf.md
@@ -25,7 +25,7 @@ abstract = "This chapter describes the development of students' thinking as they
 image_preview = ""
 
 selected = true
-#projects = [""]
+#projects = ["catalst-project"]
 
 
 # Links (optional).
