updated content and color scheme

--- a/content/publication/2006-nctm.md
+++ b/content/publication/2006-nctm.md
@@ -15,10 +15,10 @@ authors = ["Ben-Zvi, D.", "Garfield, J.", "Zieffler, A."]
 # 6 = Book chapter
 publication_types = ["6"]
 
-publication = "In In G. Burrill, &amp; P. C. Elliott (Eds.), *Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook* (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics."
+publication = "In G. Burrill, &amp; P. C. Elliott (Eds.), *Thinking and Reasoning with Data and Chance: 68th NCTM Yearbook* (pp. 467&ndash;482). Reston, VA: National Council of Teachers of Mathematics"
 
 
-abstract = "Increased attention is being paid, both in the United States and abroad, to the crucial need for statistically educatedcitizens who are able to reason about and with data while taking into account uncertainty. Statistics is now included in the grades K&ndash;12 mathematics curriculum, and increasing numbers of students are taking Advanced Placement Statistics courses in high school as well as introductory courses in college. However, increasing the amount of instruction in statistics alone is not sufficient to prepare statistically literate students and citizens. A growing number of research studies reveal the difficulties involved in understanding statistical ideas and reasoning about data and chance (see, for example, Ben-Zvi and Garfield, 2004; Cobb, 1999; Konold and Higgins, 2003; and Shaughnessey, 1992)."
+abstract = "Increased attention is being paid, both in the United States and abroad, to the crucial need for statistically educated citizens who are able to reason about and with data while taking into account uncertainty. Statistics is now included in the grades K&ndash;12 mathematics curriculum, and increasing numbers of students are taking Advanced Placement Statistics courses in high school as well as introductory courses in college. However, increasing the amount of instruction in statistics alone is not sufficient to prepare statistically literate students and citizens. A growing number of research studies reveal the difficulties involved in understanding statistical ideas and reasoning about data and chance (see, for example, Ben-Zvi and Garfield, 2004; Cobb, 1999; Konold and Higgins, 2003; and Shaughnessey, 1992)."
 
 
 # Featured image thumbnail (optional)
