--- a/content/publication/2013-tise.md
+++ b/content/publication/2013-tise.md
@@ -15,7 +15,7 @@ authors = ["Zieffler, A.", "Isaak, R.", "Garfield, J."]
 # 6 = Book chapter
 publication_types = ["2"]
 
-publication = "*Technology Innovations in Statistics Education, 7*(3)."
+publication = "*Technology Innovations in Statistics Education, 7*(3)"
 
 
 abstract = "In the past several decades, the statistics textbook has evolved to include a variety of ancillary materials intended to supplement students' learning and assist the teacher (e.g., workbooks, study guides, audio program, test banks, PowerPoint slides, links to applets and websites, etc.). Given the capabilities of modern technology and the need for change in content and pedagogy in the introductory statistics course, a new vision of a textbook is offered, one that exploits new technology, provides modern content, and is a more integral part of the course. Rather than serving as a supplement to a course, the modern textbook needs to embody the course. An example of such a text in the context of a unique, new introductory statistics course is provided."
