--- a/content/publication/2014-rolf.md
+++ b/content/publication/2014-rolf.md
@@ -15,7 +15,7 @@ authors = ["delMas, R.", "Garfield, J.", "Zieffler, A."]
 # 6 = Book chapter
 publication_types = ["6"]
 
-publication = "In T. Wassong, D. Frischemeier, P. R. Fischer, R. Hochmuth, &amp; P. Bender (Eds.), *Mit Werkzeugen, Mathematik und Stochastik lernen&mdash;Using tools for Learning mathematics and statistics* (pp. 405–420). Wiesbaden, Germany: Springer Spektrum."
+publication = "In T. Wassong, D. Frischemeier, P. R. Fischer, R. Hochmuth, &amp; P. Bender (Eds.), *Mit Werkzeugen, Mathematik und Stochastik lernen&mdash;Using tools for Learning mathematics and statistics* (pp. 405–420). Wiesbaden, Germany: Springer Spektrum"
 
 
 abstract = "This chapter describes the development of students' thinking as they experienced an innovative introductory statistics curriculum that replaced traditional content and methods with an approach based on simulation and resampling. The methods employed in the curriculum were based on a framework for inference that had students specify a chance model, draw repeated samples of simulated data, create a distribution of summary measures, and use the distribution to evaluate a claim. Students used TinkerPlots&#8482; software to resample simulated data from chance processes and models, as well as to explore the distribution of summary measures. The software incorporates many features of a \"Monte Carlo Workbench\" (see Biehler, 1997a) that allows students to visualize the entire modeling process. Problem solving interviews were conducted with five students after five weeks of the curriculum. These interviews revealed that students were beginning to develop an understanding of important concepts underlying the process of statistical inference. The results suggest that students are able to create and use appropriate chance models and simulations to draw statistical inferences after only a few weeks of instruction in an introductory course. The interviews also suggest that TinkerPlots&#8482; provides students with a memorable, visual medium to support the development of their thinking and reasoning."
