Updated predictions with better data

--- a/content/post/2018-03-03-boys-hockey.Rmd
+++ b/content/post/2018-03-03-boys-hockey.Rmd
@@ -32,15 +32,15 @@ I wanted to make compute probabilities, &agrave; la fivethirtyeight, for which e
 
 ## Scraping the Game-Level Data
 
-To begin, I had to obtain the game data for both the regular season and the section tournaments. [MN Hockey Hub](http://www.mnhockeyhub.com/) is a website that has the results for all high school hockey games played in Minnesota. I used the **rvest** package to scrape these data. 
+To begin, I had to obtain the game data for both the regular season and the section tournaments. [MN Hockey Hub](http://www.mnhockeyhub.com/) is a website that has the results for all high school hockey games played in Minnesota. I used the **rvest** package to scrape these data. Unfortunately, MN Hockey Hub separates their regular season and section playoffs, so I had to run the scrape on each separately and then combine the data.
 
 ```{r eval=FALSE}
-# Beginning and ending dates for games
+# Beginning and ending dates for regular season games
 start = as.Date("2017/11/22", format = "%Y/%m/%d")
-end   = as.Date("2018/03/02",format="%Y/%m/%d")
+end   = as.Date("2018/02/17",format="%Y/%m/%d")
 
 # Create an empty list with 101 elements
-results = rep(list(NA), 101) 
+results = rep(list(NA), 88) 
 
 # Initialize values
 theDate = start
@@ -62,36 +62,62 @@ while (theDate <= end){
   theDate = theDate + 1 
   i = i + 1
 }
+
+## Scrape section games
+start = as.Date("2018/02/17", format = "%Y/%m/%d")
+end   = as.Date("2018/03/02",format="%Y/%m/%d")
+results2 = rep(list(NA), 14) 
+theDate = start
+i = 1
+
+while (theDate <= end){
+  url = paste0("http://www.mnhockeyhub.com/schedule/day/league_instance/60876/",
+               format(theDate,"%Y/%m/%d"),
+               "?subseason=486996"
+  )
+  
+  results2[[i]] = as.data.frame(
+    url %>% 
+      read_html() %>% 
+      html_table()
+  ) %>% 
+    mutate(date = theDate)
+  theDate = theDate + 1 
+  i = i + 1
+}
 ```
 
 I then took these scraped data, and put them into a dataframe using `do.call()` and formatted the data frame using **dplyr** functions.
 
 ```{r eval=FALSE}
-# Transform list to data frame
-hockey = do.call(rbind, results)
+# Transform lists to data frames
+hockey_reg_season = do.call(rbind, results)
+hockey_sections = do.call(rbind, results2)
 
 # Format the data
 library(dplyr)
 
-hockey = hockey %>%
+hockey = rbind(hockey_reg_season, hockey_sections) %>%
   select(date,
          home = Home,
          home_score = H,
          visitor = Visitor,
          visitor_score = V,
          location = Location
-         ) %>%
+  ) %>%
   mutate(
     home_score = as.integer(home_score),
     visitor_score = as.integer(visitor_score)
-    ) %>%
+  ) %>%
   tidyr::drop_na()
 ```
 
+At this point I did a data integrity check. The first thing I noticed was that there were games in the data on every day from the start of the regular season through the section playoffs. I knew somethibng was wrong as high school teams do not play games on Sundays or on holidays. In looking at those days, it turned out the web scraper just duplicated games from future days (e.g., there was no game on 12-25-2017, so it just skipped ahead to the next day a game was played, 12-26-2017, and put those games in the December 25th date. It then also put them in the 12-26-2017 date as well.) Rather than try to program a solution in R, I outputted the data to a CSV file and manually removed the few dates that there were no games played.
 
 ```{r echo=FALSE, message=FALSE}
 library(dplyr)
-hockey = readr::read_csv("~/Dropbox/data/mn-hockey-boys-2018-03-03.csv")
+hockey = readr::read_csv("~/Dropbox/data/mn-hockey-boys-2018-03-09.csv") %>%
+  filter(season != "State Tournament")
 hockey
 ```
 
@@ -144,19 +170,19 @@ class_aa = e %>%
 knitr::kable(class_aa, caption = "Elo ratings and rankings for the eight Class AA teams that qualified for the state tournament.", align = c("l", "c", "c"))
 ```
 
-Comparing these to the actual tournament seeds, we see some differences in the top five seeds. In Class A, the coaches included Thief River Falls in the top five, while our Elo model put Monticello in the top five. There are also some ranking differences between the coaches picks and our Elo model for the other teams. 
+Comparing these to the actual tournament seeds, we see several differences in the top four seeds. In Class A, the coaches included Alexandria in the top five, while our Elo model put Monticello in the top four. In Class AA, the Elo model and the coaches selected the same top five teams, but had a different rank ordering for those teams. There are also some ranking differences between the coaches picks and our Elo model for the other teams. 
 
-In Class AA, the Elo model and the coaches selected the same top five teams, but had a different rank ordering for the bottom three of those five. Both ranked Minnetonka \#1 and Edina \#2.
+
 
 ## Simulate the State Tournament
 
-We can now use these Elo ratings to determine the probability that one team would beat another. For example, in the Class A quarterfinal game between Hermantown (\#1) and Monticello (\#8), Hermantown's probability of beating Monticello is 0.547 .
+We can now use these Elo ratings to determine the probability that one team would beat another. For example, in the Class A quarterfinal game between Hermantown (\#1) and Monticello (\#8), Hermantown's probability of beating Monticello is 0.574 .
 
 ```{r}
 predict(elo_reg_season, data.frame(home = "Hermantown", visitor = "Monticello"))
 ```
 
-I simulated the state tournament by using a random-number generator to determine the winner of each game. For instance, to simulate the Hermantown/Monticello game, I used the `runif()` function to generate a random number drawn from the uniform distribution between 0 and 1. If the result is less than or equal to 0.547, Hermantown is the winner; if not, Monticello wins. The syntax for simulating the Class A state tournament 10,000 times is below.
+I simulated the state tournament by using a random-number generator to determine the winner of each game. For instance, to simulate the Hermantown/Monticello game, I used the `runif()` function to generate a random number drawn from the uniform distribution between 0 and 1. If the result is less than or equal to 0.574, Hermantown is the winner; if not, Monticello wins. The syntax for simulating the Class A state tournament 10,000 times is below.
 
 ```{r cache=TRUE}
 # Enter teams in rank order
@@ -234,7 +260,7 @@ A = data.frame(champion) %>%
 knitr::kable(A, caption = "Probability that each of the eight Class A teams will win the state tournament.", align = c("l", "c"), col.names = c("Team", "Probability"))
 ```
 
-Based on these simulations, Mahtomedi has about a 30\% chance of winning the Class A tournament.
+Based on these simulations, Mahtomedi, Hermantown and Orono all have about an equal chance of winning the Class A tournament.
 
 I also carried out a similar simulation for the Class AA tournament.
 
@@ -312,5 +338,5 @@ AA = data.frame(champion2) %>%
 knitr::kable(AA, caption = "Probability that each of the eight Class AA teams will win the state tournament.", align = c("l", "c"), col.names = c("Team", "Probability"))
 ```
 
-The simulation results suggest that both Minnetonka and Edina have a pretty good shot of winning the tournament (slight edge to Minnetonka). 
+The simulation results suggest that both Edina and St. Thomas Academy have a pretty good shot of winning the tournament, and Minnetonka and Duluth East are also in the mix.
 
