--- a/content/post/2018-03-08-boys-hockey.Rmd
+++ b/content/post/2018-03-08-boys-hockey.Rmd
@@ -20,7 +20,8 @@ I simulated the Class A state tournament 10,000 times using the same process as 
 
 ```{r echo=FALSE, message=FALSE}
 library(dplyr)
-hockey = readr::read_csv("~/Dropbox/data/mn-hockey-boys-2018-03-08.csv")
+hockey = readr::read_csv("~/Dropbox/data/mn-hockey-boys-2018-03-09.csv") %>%
+  filter(date != "3/9/18")
 ```
 
 
@@ -36,7 +37,7 @@ class_a = e %>%
   mutate(Team = row.names(e)) %>% 
   arrange(desc(Elo)) %>%
   filter(Team %in% c("Hermantown", "Mahtomedi", "Orono", "Alexandria", "Thief River Falls", "Litchfield/Dassel-Cokato", "Mankato East", "Monticello")) %>%
-  mutate(Elo_old = c(1696.529, 1625.479, 1603.934, 1592.582, 1563.855, 1529.721, 1520.890, 1477.433)) %>%
+  mutate(Elo_old = c(1639.196, 1624.538, 1609.513, 1587.179, 1571.198, 1562.803, 1551.141, 1530.773)) %>%
   select(Team, 'Original Elo' = Elo_old, 'Updated Elo' = Elo)
 
 knitr::kable(class_a, caption = "Original (at beginning of tournament) and updated Elo ratings (after the quartefinal games) for the eight Class A teams that qualified for the state tournament.", align = c("l", "c", "c"))
@@ -88,12 +89,12 @@ A = data.frame(champion) %>%
   group_by(champion) %>%
   summarize(Probability = length(champion)/10000) %>%
   arrange(desc(Probability)) %>%
-  mutate(old_prob = c(0.3250, 0.1696, 0.1532, 0.0997)) %>%
+  mutate(old_prob = c(0.1987, 0.1802, 0.1127, 0.1086)) %>%
   select(champion, old_prob, Probability)
 
 out = data.frame(
   champion = c("Monticello", "Thief River Falls", "Mankato East", "Litchfield/Dassel-Cokato"),
-  old_prob = c(0.1138, 0.0561, 0.0522, 0.0304),
+  old_prob = c(0.1127, 0.0939, 0.0812, 0.0635),
   Probability = 0
 )
 
@@ -103,7 +104,7 @@ A = rbind(A, out)
 knitr::kable(A, caption = "Probability that each of the eight Class A teams will win the state tournament.", align = c("l", "c"), col.names = c("Team", "Original Probability", "Updated Probability"))
 ```
 
-Based on these simulations, Mahtomedi has increased its chances of winning the Class A tournament to 40\%. 
+Based on these simulations, Hermantown is still the favorite, and Mahtomedi and Orono also have a chance of winning the Class A tournament. 
 
 ## Class AA Tournament
 
@@ -112,8 +113,8 @@ class_aa = e %>%
   mutate(Team = row.names(e)) %>%
   arrange(desc(Elo)) %>%
   mutate(Rank = 1:nrow(e)) %>%
-  filter(Team %in% c("Minnetonka", "Edina", "Duluth East", "St. Thomas Academy", "Centennial", "STMA", "Lakeville North", "Hill-Murray")) %>%
-  mutate(Elo_old = c(1814.146, 1791.784, 1726.164, 1692.342, 1688.271, 1662.962, 1658.269, 1656.613)) %>%
+  filter(Team %in% c("Edina", "St. Thomas Academy", "Minnetonka", "Duluth East", "STMA", "Centennial", "Lakeville North", "Hill-Murray")) %>%
+  mutate(Elo_old = c(1718.589, 1716.570, 1691.315, 1693.757, 1655.561, 1625.291, 1578.414, 1557.501)) %>%
   select(Team, 'Old Elo' = Elo_old, 'Updated Elo' = Elo)
 
 knitr::kable(class_aa, caption = "Elo ratings and rankings for the eight Class AA teams that qualified for the state tournament.", align = c("l", "c", "c"))
@@ -164,12 +165,12 @@ AA = data.frame(champion) %>%
   group_by(champion) %>%
   summarize(Probability = length(champion)/10000) %>%
   arrange(desc(Probability)) %>%
-  mutate(old_prob = c(0.2895, 0.2471, 0.0944, 0.0837)) %>%
+  mutate(old_prob = c(0.2083, 0.1852, 0.1495, 0.0701)) %>%
   select(champion, old_prob, Probability)
 
 out = data.frame(
   champion = c("St. Thomas Academy", "STMA", "Lakeville North", "Hill-Murray"),
-  old_prob = c(0.1180, 0.0583, 0.0580, 0.0510),
+  old_prob = c(0.2098, 0.1016, 0.0416, 0.0339),
   Probability = 0
 )
 
@@ -179,6 +180,6 @@ AA = rbind(AA, out)
 knitr::kable(AA, caption = "Probability that each of the eight Class AA teams will win the state tournament.", align = c("l", "c"), col.names = c("Team", "Original Probability", "Updated Probability"))
 ```
 
-Based on these simulations, Minnetonka and Edina are still the favorites in the Class AA tournament, even more so than before.
+St. Thomas Aademy's loss to Centennial really shook things up. Edina and Minnetonka are now the favorites in the Class AA tournament, with Duluth East a not so distant third.
 
 
