--- a/content/post/2018-08-27-inbox-zero.Rmd
+++ b/content/post/2018-08-27-inbox-zero.Rmd
@@ -11,7 +11,7 @@ header:
 
 On Saturday August 25, 2018 at 8:08 PM I finally hit [Inbox Zero](https://www.youtube.com/watch?v=z9UjeTMb3Yk)!
 
-![Inbox Zero](img/inbox-zero.png)
+![Inbox Zero](/img/inbox-zero.png)
 
 I did it by immediately copying the snippets of email I wanted into Evernote notes (my notetaking system). I also attended to to-dos more immediately, or added them to a note of "To-Dos".
 
