--- a/content/publication/2018-zdm.md
+++ b/content/publication/2018-zdm.md
@@ -1,5 +1,5 @@
 +++
-title = "Every Rose has it's Thorn: Secondary Teachers' Reasoning about Statistical Models"
+title = "Every Rose has It's Thorn: Secondary Teachers' Reasoning about Statistical Models"
 date = "2018-06-07"
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
