--- a/content/post/2019-05-01-cv-tips.Rmd
+++ b/content/post/2019-05-01-cv-tips.Rmd
@@ -46,10 +46,16 @@ The sequencing of these headings varies, although typically "Education" and "Aca
 
 ## General Formatting/Typography
 
-Make your CV look good. It is the first impression other academics have of you as a professional if they have not met you in person. Consider the same set of publications in the figures below. The figure on the left shows those publications written using the default font in Word (Calibri; ugh) and very little formatting. On the right, the same publications have been formatted and written using Bembo Standard, a readable serifed font. 
+Make your CV look good. It is the first impression other academics have of you as a professional if they have not met you in person. Consider the same set of publications in the figures below. The first figure below shows those publications written using the default font in Word (Calibri; ugh) and very little formatting. 
 
-<img src="../../static/img/unformatted-cv.png" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;"><img src="../../static/img/formatted-cv.png" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
-<p style="clear: both;">
+![Unformatted CV](/post/2019-05-01-cv-tips_files/unformatted-cv.png){width=400px}
+
+
+<br />
+
+Now, the same publications have been written using Bembo Standard, a readable serifed font. They have also been formatted and the links have been colored.
+
+![Formatted CV](/post/2019-05-01-cv-tips_files/formatted-cv.png){width=400px}
 
 Font matters. Formatting matters. 
 
